# multimedia-viewer

./: CMakeLists.txt  icons.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui
